# nfl

./: .gitignore  .ipython-commands  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  REMAINING_ISSUES_JULY2026.md  dates.py  espn.py  fbd.py  fo.py  games.py  iceberg_catalog.backup_20260719_212706.db  iceberg_catalog.db  load_data.py  mkdocs.yml  msf.py  names.py  nfl-gamecenter-stub  nflcom.py  nflseasons.py  pff.py  pfr-fantasy.py  pfr-team.py  pfr.py  pgf-cli.py  pgf.py  pp.py  pyproject.toml  rebuild_catalog.py  seasons.py  seasonsdata.py  setup.py  teams.py  teamstats_offense_yearly.csv  tgf-cli.py  utility.py  weekly-projections-stub  xref.py
.iceberg/: write_log.json
.ipynb_checkpoints/: fantasy_points-checkpoint.ipynb
.secrets/: credentials.json  yahoo_token.json
agents/: .gitignore  draft.py  draftkings.py  fantasylabs.py  fantasypros.py  nflcom.py  pfr.py
blueprints/: ENTITY_STANDARDIZATION_BLUEPRINT.md  FANTASY_PROS_INTEGRATION_BLUEPRINT.md  FANTASY_PROS_NOTEBOOK_MIGRATION.md  NFLVERSE_INGESTION_BLUEPRINT.md  YAHOO_INTEGRATION_BLUEPRINT.md
data/: 2016-dk-results.csv  pfr-teams.csv  pgf.json  players.json  pp_players.json  prf.players.csv
db/: DraftKingsNFLDatabase.py  nflpg.py
docs/: ZENSICAL_DOCUMENTATION.md  conf.py  index.md  index.rst
examples/: Air Yards.ipynb  NFL Targets (in R).ipynb  load_yahoo_data.ipynb  nfl_team.ipynb  nfldb.md  nfldb.odt  query_tables.ipynb  query_tables_fixed.ipynb  query_yahoo_tables.ipynb  sd-iqr.ipynb
nfl/: db.py  espn.py  espn_api.py  fo.py  gf.py  (+15 more)
nfl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+506 files in other folders)
